--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -241,6 +241,11 @@
               <adhoc-discount></adhoc-discount>
             </div>
           </section>
+          <section data-category="notpaid-report">
+            <div class="col-md-12">
+              <notpaid-report></notpaid-report>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
