--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -250,3 +250,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="adhoc-discount/adhoc-discount.html">
 <link rel="import" href="adhoc-discount-itemcard/adhoc-discount-itemcard.html">
 <link rel="import" href="installment-pattern-change/installment-pattern-change.html">
+<link rel="import" href="notpaid-report/notpaid-report.html">
