--- a/app/elements/pendingfee-report/pendingfee-report.html
+++ b/app/elements/pendingfee-report/pendingfee-report.html
@@ -44,12 +44,12 @@
      <table class="table table-hover" id="pendingfeereportt">
       <thead>
       <tr>
-        <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th><th>Actual Fee</th><th>Discount</th><th>Total Fee</th><th>Paid Fee</th><th>Pending Fee</th>
+        <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th><th>Type</th><th>Actual Fee</th><th>Discount</th><th>Total Fee</th><th>Paid Fee</th><th>Pending Fee</th>
       </tr>
       </thead>
       <tbody>
       <template  is="dom-repeat" items="{{pendingfeearr}}" as="item">
-        <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.class_for_admission}}</td><td>{{item.fees}}</td><td>{{item.discount_amount}}</td><td>{{item.total_amount}}</td><td>{{item.paid_amount}}</td><td>{{item.pending_amount}}</td></tr>
+        <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.class_for_admission}}</td><td>{{item.admission_status}}</td><td>{{item.fees}}</td><td>{{item.discount_amount}}</td><td>{{item.total_amount}}</td><td>{{item.paid_amount}}</td><td>{{item.pending_amount}}</td></tr>
       </template>
       <!-- <tr><th colspan="11" style="text-align: right;">Total Amount: &nbsp;&nbsp;{{totalamount}}</th></tr> -->
       </tbody>
