--- a/app/elements/fees-service/fees-service.html
+++ b/app/elements/fees-service/fees-service.html
@@ -167,7 +167,8 @@
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");   
         obj.admissionstatus=localStorage.getItem("curr_sess_admissionstatus");
         obj.createdby=localStorage.getItem("employeeid"); 
-        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag");   
+        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag"); 
+        obj.type=localStorage.getItem("curr_sess_feetypepaymentflag");  
         this.insertcashfeesparam=obj;   
         // paymentarr.push(obj);            
         this.$.insertcashfeesajax.generateRequest();
@@ -234,7 +235,8 @@
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.admissionstatus=localStorage.getItem("curr_sess_admissionstatus");
         obj.createdby=localStorage.getItem("employeeid"); 
-        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag");   
+        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag");
+        obj.type=localStorage.getItem("curr_sess_feetypepaymentflag");   
         this.Thirdpartyfeesparam=obj;   
         // paymentarr.push(obj);            
         this.$.Thirdpartyfeesajax.generateRequest();
@@ -312,7 +314,8 @@
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.admissionstatus=localStorage.getItem("curr_sess_admissionstatus");  
         obj.createdby=localStorage.getItem("employeeid"); 
-        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag");   
+        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag"); 
+        obj.type=localStorage.getItem("curr_sess_feetypepaymentflag");  
         obj.receiptdate=cheque[i].receiptdate;     
         this.insertchequefeesparam=obj; 
         // alert(JSON.stringify(obj)); 
@@ -381,7 +384,8 @@
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.admissionstatus=localStorage.getItem("curr_sess_admissionstatus");
         obj.createdby=localStorage.getItem("employeeid"); 
-        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag");   
+        obj.provisionflag=localStorage.getItem("curr_sess_provisionflag");
+        obj.type=localStorage.getItem("curr_sess_feetypepaymentflag");   
         obj.receiptdate=transfer[i].receiptdate;     
         this.inserttransferfeesparam=obj; 
         // paymentarr.push(obj);   
